bugfix - show tooltip on name hover for clipped text

--- a/wwwroot/src/scss/_layout.scss
+++ b/wwwroot/src/scss/_layout.scss
@@ -94,6 +94,7 @@ html {
         line-height: 60px;
         overflow: hidden;
         text-overflow: ellipsis;
+        text-overflow: fade;
         padding: 5px 0;
 
         &:hover {
